# pepper2

./: .isort.cfg  Makefile  README.md  mypy.ini  pyproject.toml  shell.nix  uk.org.j5.pepper2.conf
.circleci/: config.yml
docs/: DEBIAN.md
nix/: nixpkgs.nix
nix/nixos/: vm.nix
nix/nixos/modules/: pepper2-service.nix
nix/pkgs/: default.nix  mypy-check-hook.nix  mypy-check-hook.sh  overlay.nix  pepper2.nix
pepper2/: __init__.py  api.py  constraint.py  daemon_status.py  drives.py  error.py  py.typed  usbinfo.py
pepper2/api/: __init__.py  api.py
pepper2/cli/: __init__.py  app.py  daemon_status.py  status.py
pepper2/cli/usercode/: __init__.py  kill.py  start.py  usercode_status.py
pepper2/common/: __init__.py  daemon_status.py  drive.py  drives.py
pepper2/common/drive_types/: __init__.py  drive_type.py  metadata.py  no_action.py  usercode.py
pepper2/daemon/: __init__.py  app.py  controller.py  controller.xml  daemon.py  publishable_group.py  udisks_controller.py  udisks_manager.py  usbinfo.py
pepper2/daemon/api/: __init__.py  core.py
pepper2/daemon/dbus/: __init__.py  controller.py  controller.xml  (+2 more)
pepper2/drive_types/: __init__.py  drive_type.py  metadata.py  no_action.py  usercode.py
pepper2/usercode_driver/: __init__.py  python.py  unix_process.py  usercode_driver.py
stubs/: uvicorn.pyi
stubs/pydbus/: bus.py  publication.py
tests/: __init__.py  test_constraints.py  test_drives.py  test_module.py
tests/api/: __init__.py  test_daemon_version.py
tests/common/: __init__.py  test_constraints.py  test_drives.py
tests/daemon/: __init__.py
(+6 files in other folders)
